tests/baselines/reference/implementingAnInterfaceExtendingClassWithPrivates2(strict=true).errors.txt
implementingAnInterfaceExtendingClassWithPrivates2.ts(2,13): error TS2564: Property 'x' has no initializer and is not definitely assigned in the constructor.
implementingAnInterfaceExtendingClassWithPrivates2.ts(10,5): error TS2564: Property 'y' has no initializer and is not definitely assigned in the constructor.
implementingAnInterfaceExtendingClassWithPrivates2.ts(13,7): error TS2415: Class 'Bar2' incorrectly extends base class 'Foo'.
  Property 'x' is private in type 'Foo' but not in type 'Bar2'.
implementingAnInterfaceExtendingClassWithPrivates2.ts(13,7): error TS2420: Class 'Bar2' incorrectly implements interface 'I'.
  Property 'x' is private in type 'I' but not in type 'Bar2'.
implementingAnInterfaceExtendingClassWithPrivates2.ts(14,5): error TS2564: Property 'x' has no initializer and is not definitely assigned in the constructor.
implementingAnInterfaceExtendingClassWithPrivates2.ts(15,5): error TS2564: Property 'y' has no initializer and is not definitely assigned in the constructor.
implementingAnInterfaceExtendingClassWithPrivates2.ts(18,7): error TS2415: Class 'Bar3' incorrectly extends base class 'Foo'.
  Types have separate declarations of a private property 'x'.
implementingAnInterfaceExtendingClassWithPrivates2.ts(18,7): error TS2420: Class 'Bar3' incorrectly implements interface 'I'.
  Types have separate declarations of a private property 'x'.
implementingAnInterfaceExtendingClassWithPrivates2.ts(19,13): error TS2564: Property 'x' has no initializer and is not definitely assigned in the constructor.
implementingAnInterfaceExtendingClassWithPrivates2.ts(20,5): error TS2564: Property 'y' has no initializer and is not definitely assigned in the constructor.
implementingAnInterfaceExtendingClassWithPrivates2.ts(26,17): error TS2564: Property 'x' has no initializer and is not definitely assigned in the constructor.
implementingAnInterfaceExtendingClassWithPrivates2.ts(30,9): error TS2564: Property 'z' has no initializer and is not definitely assigned in the constructor.
implementingAnInterfaceExtendingClassWithPrivates2.ts(38,9): error TS2564: Property 'y' has no initializer and is not definitely assigned in the constructor.
implementingAnInterfaceExtendingClassWithPrivates2.ts(39,9): error TS2564: Property 'z' has no initializer and is not definitely assigned in the constructor.
implementingAnInterfaceExtendingClassWithPrivates2.ts(42,11): error TS2415: Class 'Bar2' incorrectly extends base class 'Foo'.
  Property 'x' is private in type 'Foo' but not in type 'Bar2'.
implementingAnInterfaceExtendingClassWithPrivates2.ts(42,11): error TS2420: Class 'Bar2' incorrectly implements interface 'I'.
  Property 'z' is missing in type 'Bar2' but required in type 'I'.
implementingAnInterfaceExtendingClassWithPrivates2.ts(43,9): error TS2564: Property 'x' has no initializer and is not definitely assigned in the constructor.
implementingAnInterfaceExtendingClassWithPrivates2.ts(44,9): error TS2564: Property 'y' has no initializer and is not definitely assigned in the constructor.
implementingAnInterfaceExtendingClassWithPrivates2.ts(47,11): error TS2415: Class 'Bar3' incorrectly extends base class 'Foo'.
  Types have separate declarations of a private property 'x'.
implementingAnInterfaceExtendingClassWithPrivates2.ts(47,11): error TS2420: Class 'Bar3' incorrectly implements interface 'I'.
  Property 'z' is missing in type 'Bar3' but required in type 'I'.
implementingAnInterfaceExtendingClassWithPrivates2.ts(48,17): error TS2564: Property 'x' has no initializer and is not definitely assigned in the constructor.
implementingAnInterfaceExtendingClassWithPrivates2.ts(49,9): error TS2564: Property 'y' has no initializer and is not definitely assigned in the constructor.
implementingAnInterfaceExtendingClassWithPrivates2.ts(56,17): error TS2564: Property 'x' has no initializer and is not definitely assigned in the constructor.
implementingAnInterfaceExtendingClassWithPrivates2.ts(60,17): error TS2564: Property 'y' has no initializer and is not definitely assigned in the constructor.
implementingAnInterfaceExtendingClassWithPrivates2.ts(67,11): error TS2420: Class 'Bar' incorrectly implements interface 'I'.
  Property 'y' is missing in type 'Bar' but required in type 'I'.
implementingAnInterfaceExtendingClassWithPrivates2.ts(68,9): error TS2564: Property 'z' has no initializer and is not definitely assigned in the constructor.
implementingAnInterfaceExtendingClassWithPrivates2.ts(72,14): error TS2454: Variable 'b' is used before being assigned.
implementingAnInterfaceExtendingClassWithPrivates2.ts(73,14): error TS2454: Variable 'b' is used before being assigned.
implementingAnInterfaceExtendingClassWithPrivates2.ts(73,16): error TS2341: Property 'x' is private and only accessible within class 'Foo'.
implementingAnInterfaceExtendingClassWithPrivates2.ts(74,14): error TS2454: Variable 'b' is used before being assigned.
implementingAnInterfaceExtendingClassWithPrivates2.ts(74,16): error TS2339: Property 'y' does not exist on type 'Bar'.
implementingAnInterfaceExtendingClassWithPrivates2.ts(76,11): error TS2415: Class 'Bar2' incorrectly extends base class 'Foo'.
  Property 'x' is private in type 'Foo' but not in type 'Bar2'.
implementingAnInterfaceExtendingClassWithPrivates2.ts(76,11): error TS2420: Class 'Bar2' incorrectly implements interface 'I'.
  Property 'y' is missing in type 'Bar2' but required in type 'I'.
implementingAnInterfaceExtendingClassWithPrivates2.ts(77,9): error TS2564: Property 'x' has no initializer and is not definitely assigned in the constructor.
implementingAnInterfaceExtendingClassWithPrivates2.ts(78,9): error TS2564: Property 'z' has no initializer and is not definitely assigned in the constructor.
implementingAnInterfaceExtendingClassWithPrivates2.ts(81,11): error TS2415: Class 'Bar3' incorrectly extends base class 'Foo'.
  Types have separate declarations of a private property 'x'.
implementingAnInterfaceExtendingClassWithPrivates2.ts(81,11): error TS2420: Class 'Bar3' incorrectly implements interface 'I'.
  Property 'y' is missing in type 'Bar3' but required in type 'I'.
implementingAnInterfaceExtendingClassWithPrivates2.ts(82,17): error TS2564: Property 'x' has no initializer and is not definitely assigned in the constructor.
implementingAnInterfaceExtendingClassWithPrivates2.ts(83,9): error TS2564: Property 'z' has no initializer and is not definitely assigned in the constructor.


==== implementingAnInterfaceExtendingClassWithPrivates2.ts (39 errors) ====
    class Foo {
        private x: string;
                ~
!!! error TS2564: Property 'x' has no initializer and is not definitely assigned in the constructor.
    }
    
    interface I extends Foo {
        y: number;
    }
    
    class Bar extends Foo implements I { // ok
        y: number;
        ~
!!! error TS2564: Property 'y' has no initializer and is not definitely assigned in the constructor.
    }
    
    class Bar2 extends Foo implements I { // error
          ~~~~
!!! error TS2415: Class 'Bar2' incorrectly extends base class 'Foo'.
!!! error TS2415:   Property 'x' is private in type 'Foo' but not in type 'Bar2'.
          ~~~~
!!! error TS2420: Class 'Bar2' incorrectly implements interface 'I'.
!!! error TS2420:   Property 'x' is private in type 'I' but not in type 'Bar2'.
        x: string;
        ~
!!! error TS2564: Property 'x' has no initializer and is not definitely assigned in the constructor.
        y: number;
        ~
!!! error TS2564: Property 'y' has no initializer and is not definitely assigned in the constructor.
    }
    
    class Bar3 extends Foo implements I { // error
          ~~~~
!!! error TS2415: Class 'Bar3' incorrectly extends base class 'Foo'.
!!! error TS2415:   Types have separate declarations of a private property 'x'.
          ~~~~
!!! error TS2420: Class 'Bar3' incorrectly implements interface 'I'.
!!! error TS2420:   Types have separate declarations of a private property 'x'.
        private x: string;
                ~
!!! error TS2564: Property 'x' has no initializer and is not definitely assigned in the constructor.
        y: number;
        ~
!!! error TS2564: Property 'y' has no initializer and is not definitely assigned in the constructor.
    }
    
    // another level of indirection
    module M {
        class Foo {
            private x: string;
                    ~
!!! error TS2564: Property 'x' has no initializer and is not definitely assigned in the constructor.
        }
    
        class Baz extends Foo {
            z: number;
            ~
!!! error TS2564: Property 'z' has no initializer and is not definitely assigned in the constructor.
        }
    
        interface I extends Baz {
            y: number;
        }
    
        class Bar extends Foo implements I { // ok
            y: number;
            ~
!!! error TS2564: Property 'y' has no initializer and is not definitely assigned in the constructor.
            z: number;
            ~
!!! error TS2564: Property 'z' has no initializer and is not definitely assigned in the constructor.
        }
    
        class Bar2 extends Foo implements I { // error
              ~~~~
!!! error TS2415: Class 'Bar2' incorrectly extends base class 'Foo'.
!!! error TS2415:   Property 'x' is private in type 'Foo' but not in type 'Bar2'.
              ~~~~
!!! error TS2420: Class 'Bar2' incorrectly implements interface 'I'.
!!! error TS2420:   Property 'z' is missing in type 'Bar2' but required in type 'I'.
!!! related TS2728 implementingAnInterfaceExtendingClassWithPrivates2.ts:30:9: 'z' is declared here.
            x: string;
            ~
!!! error TS2564: Property 'x' has no initializer and is not definitely assigned in the constructor.
            y: number;
            ~
!!! error TS2564: Property 'y' has no initializer and is not definitely assigned in the constructor.
        }
    
        class Bar3 extends Foo implements I { // error
              ~~~~
!!! error TS2415: Class 'Bar3' incorrectly extends base class 'Foo'.
!!! error TS2415:   Types have separate declarations of a private property 'x'.
              ~~~~
!!! error TS2420: Class 'Bar3' incorrectly implements interface 'I'.
!!! error TS2420:   Property 'z' is missing in type 'Bar3' but required in type 'I'.
!!! related TS2728 implementingAnInterfaceExtendingClassWithPrivates2.ts:30:9: 'z' is declared here.
            private x: string;
                    ~
!!! error TS2564: Property 'x' has no initializer and is not definitely assigned in the constructor.
            y: number;
            ~
!!! error TS2564: Property 'y' has no initializer and is not definitely assigned in the constructor.
        }
    }
    
    // two levels of privates
    module M2 {
        class Foo {
            private x: string;
                    ~
!!! error TS2564: Property 'x' has no initializer and is not definitely assigned in the constructor.
        }
    
        class Baz extends Foo {
            private y: number;
                    ~
!!! error TS2564: Property 'y' has no initializer and is not definitely assigned in the constructor.
        }
    
        interface I extends Baz {
            z: number;
        }
    
        class Bar extends Foo implements I { // error
              ~~~
!!! error TS2420: Class 'Bar' incorrectly implements interface 'I'.
!!! error TS2420:   Property 'y' is missing in type 'Bar' but required in type 'I'.
!!! related TS2728 implementingAnInterfaceExtendingClassWithPrivates2.ts:60:17: 'y' is declared here.
            z: number;
            ~
!!! error TS2564: Property 'z' has no initializer and is not definitely assigned in the constructor.
        }
    
        var b: Bar;
        var r1 = b.z;
                 ~
!!! error TS2454: Variable 'b' is used before being assigned.
        var r2 = b.x; // error
                 ~
!!! error TS2454: Variable 'b' is used before being assigned.
                   ~
!!! error TS2341: Property 'x' is private and only accessible within class 'Foo'.
        var r3 = b.y; // error
                 ~
!!! error TS2454: Variable 'b' is used before being assigned.
                   ~
!!! error TS2339: Property 'y' does not exist on type 'Bar'.
    
        class Bar2 extends Foo implements I { // error
              ~~~~
!!! error TS2415: Class 'Bar2' incorrectly extends base class 'Foo'.
!!! error TS2415:   Property 'x' is private in type 'Foo' but not in type 'Bar2'.
              ~~~~
!!! error TS2420: Class 'Bar2' incorrectly implements interface 'I'.
!!! error TS2420:   Property 'y' is missing in type 'Bar2' but required in type 'I'.
!!! related TS2728 implementingAnInterfaceExtendingClassWithPrivates2.ts:60:17: 'y' is declared here.
            x: string;
            ~
!!! error TS2564: Property 'x' has no initializer and is not definitely assigned in the constructor.
            z: number;
            ~
!!! error TS2564: Property 'z' has no initializer and is not definitely assigned in the constructor.
        }
    
        class Bar3 extends Foo implements I { // error
              ~~~~
!!! error TS2415: Class 'Bar3' incorrectly extends base class 'Foo'.
!!! error TS2415:   Types have separate declarations of a private property 'x'.
              ~~~~
!!! error TS2420: Class 'Bar3' incorrectly implements interface 'I'.
!!! error TS2420:   Property 'y' is missing in type 'Bar3' but required in type 'I'.
!!! related TS2728 implementingAnInterfaceExtendingClassWithPrivates2.ts:60:17: 'y' is declared here.
            private x: string;
                    ~
!!! error TS2564: Property 'x' has no initializer and is not definitely assigned in the constructor.
            z: number;
            ~
!!! error TS2564: Property 'z' has no initializer and is not definitely assigned in the constructor.
        }
    }